# ntfs-browser

./: .clang-format  .clang-tidy  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
.github/scripts/: format.sh
.github/workflows/: cmake.yml  format.yml
NTFSLib/: CMakeLists.txt  COPYING  NTFS.h  NTFS_Attribute.h  NTFS_Common.h  NTFS_DataType.h  NTFS_FileRecord.h
NTFSLibTests/: CMakeLists.txt
NTFSLibTests/ntfsattr/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  ntfsattr.clw  ntfsattr.cpp  ntfsattr.dsp  ntfsattr.dsw  ntfsattr.h  ntfsattr.rc  ntfsattrDlg.cpp  ntfsattrDlg.h  resource.h
NTFSLibTests/ntfsattr/res/: Thumbs.db  ntfsattr.rc2
NTFSLibTests/ntfsdir/: CMakeLists.txt  main.cpp
NTFSLibTests/ntfsdump/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  ntfsdump.clw  ntfsdump.cpp  ntfsdump.dsp  ntfsdump.dsw  ntfsdump.h  ntfsdump.rc  ntfsdumpDlg.cpp  ntfsdumpDlg.h  resource.h
NTFSLibTests/ntfsdump/res/: ntfsdump.rc2
NTFSLibTests/ntfsundel/: CMakeLists.txt  StdAfx.cpp  StdAfx.h  ntfsundel.clw  ntfsundel.cpp  ntfsundel.dsp  ntfsundel.dsw  ntfsundel.h  ntfsundel.rc  ntfsundelDlg.cpp  ntfsundelDlg.h  resource.h
NTFSLibTests/ntfsundel/res/: ntfsundel.rc2
cmake/: vs.cmake
documentation/old/: An NTFS Parser Lib - CodeProject.html
include/ntfs-browser/: attr-base.h  attr-bitmap.h  attr-data.h  attr-file-name.h  attr-index-alloc.h  attr-index-root.h  attr-list.h  attr-non-resident.h  attr-resident.h  attr-std-info.h  attr-vol-info.h  attr-vol-name.h  file-name.h  file-reader.h  file-record.h  filename.h  index-block.h  index-entry.h  mask.h  mft-idx.h  ntfs-common.h  ntfs-volume.h  strategy.h
include/ntfs-browser/data/: attr-attribute-list.h  attr-defines.h  attr-filename-flag.h  attr-filename-namespace.h  attr-filename.h  attr-flag.h  attr-header-common.h  attr-header-non-resident.h  attr-header-resident.h  attr-index-root-flag.h  attr-index-root.h  attr-standard-information.h  attr-std-info-permission.h  attr-type.h  attr-vol-info-flag.h  attr-volume-information.h  data-run-entry.h  file-record-header.h  index-block.h  index-entry-flag.h  index-entry.h  mft-idx.h  ntfs-bpb.h
include/ntfs-browser/flag/: file-record.h
src/: CMakeLists.txt  attr-base.cpp  attr-bitmap.cpp  attr-bitmap.h  attr-data.h  attr-file-name.cpp  attr-file-name.h  attr-index-alloc.cpp  attr-index-alloc.h  attr-index-root.cpp  attr-index-root.h  attr-list.cpp  attr-list.h  attr-non-resident.cpp  attr-non-resident.h  attr-resident.cpp  attr-resident.h  attr-std-info.cpp  attr-std-info.h  attr-vol-info.cpp  attr-vol-info.h  attr-vol-name.cpp  attr-vol-name.h  file-name.cpp  file-reader.cpp  file-record.cpp  filename.cpp  index-block.cpp  index-block.h  index-entry.cpp  ntfs-common.h  ntfs-volume.cpp
src/attr/: attribute-list.h  filename.h  header-non-resident.h  header-resident.h  index-root.h  standard-information.h  volume-information.h
src/data/: file-record-header.cpp  file-record-header.h  index-block.h  index-entry.h  ntfs-bpb.h  run-entry.h
src/flag/: file-record.h  filename-namespace.h  filename.h  index-entry.h  std-info-permission.h
